Remove box-sizing rule to prevent spacing conflicts with cf.gov

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-html {
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
